Bug 890193.  Make the XML prettyprinter actually drop its binding when it unhooks, and remove the now-dead concept of "style binding" in the process.  r=mrbkap